--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,18 @@ canvas {
   margin: 0 auto
 }
 
+.topbar {
+  padding: 0 1rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.stem {
+  padding: 0 1rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .toggle {
   touch-action: pan-x;
   display: inline-block;
